{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "39335bae-4f3a-4d05-97bd-bfe9867510fd",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "83830c0e-9454-46ea-b0c8-57de4aaa2fa4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "981095e0-2032-4e38-9b6c-182a6818ca6b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "0cf5d4ca-9830-4afd-9af7-43abb776dfbd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchCharacterRight",
                    "type": "Button",
                    "id": "1604346d-7a41-4aca-8117-1473b4e1aa94",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchCharacterLeft",
                    "type": "Button",
                    "id": "02b9332d-d9ff-4336-8290-794462995e59",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Death",
                    "type": "Button",
                    "id": "25812e0d-403a-4021-8330-17838d61b450",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "01ee690b-7a89-4640-9ec4-d87d24f7862a",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c8aa20a-76dd-4af1-97ef-39b74c5aeb73",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ab6be2c9-6243-4584-8886-4eb7f03d9971",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchCharacterRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6373ad9b-619a-4f17-b454-f58ad9f0b148",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchCharacterLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Horizontal movement",
                    "id": "5eea8679-920f-41be-91cb-adfb98f120b0",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "14ab59c8-3835-4ea1-a333-1463a70ee4e2",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "0fb66cd4-b746-44e2-8af7-81a89893858f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f1062bf6-c058-4790-b2ab-0ffde21ee889",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Death",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "a500f1db-72b9-4608-9584-551ae8109966",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "f81c226d-e464-4985-b495-a3388d0e2117",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CharacterMenu",
                    "type": "Button",
                    "id": "eed7de5a-a9c6-4fba-b7d8-04c6b311b66d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e62dbda7-dd0c-40b6-97b2-94558665c331",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "01cb7fab-b12b-420a-a0ca-4adc7e2c109b",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CharacterMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Debug",
            "id": "219e59db-55ce-4adc-acde-a5f84537fd59",
            "actions": [
                {
                    "name": "Test",
                    "type": "Button",
                    "id": "d49d878c-1533-4d9a-ab6b-28f984f47b21",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1b8e3236-0d14-4f4c-92ba-a6de7429bb84",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Test",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}